# vaquita

./: .gitignore  :w  CMakeLists.txt  README.md  todo.txt  try.sql
client/: CMakeLists.txt
client/src/: CMakeLists.txt  client.c  client.h  main.c
other/: generate.py  move_test.py  output.txt  sol.expected  test.sql
scratch/: null_manual_insert_for_string.sql  sol.sql
server/src/: CMakeLists.txt  binarytree.h  cursor.c  cursor.h  error.c  error.h  hashtable.c  interp.c  interp.h  lexer.c  lexer.h  main.c  node.c  node.h  pager.c  pager.h  parser.c  parser.h  record.c  record.h  schema.c  schema.h  token.c  token.h  tree.c  tree.h  util.c  util.h  value.c  value.h  vdb.c  vdb.h  vm.c  vm.h
src/: .main.c.swp  CMakeLists.txt  binarytree.c  binarytree.h  data.c  data.h  error.c  expr.h  hashtable.c  hashtable.h  lexer.c  lexer.h  main.c  node.c  node.h  pager.c  pager.h  parser.c  parser.h  record.c  record.h  schema.c  schema.h  token.c  token.h  tree.c  tree.h  util.c  util.h  value.c  value.h  vdb.c  vdb.h  vm.c
test/: aggregate_count.expected  aggregate_count.sql  aggregate_max.expected  aggregate_max.sql  aggregate_min.expected  aggregate_min.sql  aggregate_sum.expected  aggregate_sum.sql  comment.expected  comment.sql  create_db.sql  create_drop_db.expected  create_drop_db.sql  create_drop_table.expected  create_drop_table.sql  delete_all.expected  delete_all.sql  delete_records.expected  delete_records.sql  delete_where.expected  delete_where.sql  describe_table.expected  describe_table.sql  distinct.expected  distinct.sql  group_by.expected  group_by.sql  having_avg.expected  having_avg.sql  having_count.expected  having_count.sql  having_max.expected  having_max.sql  having_min.expected  having_min.sql  having_sum.expected  having_sum.sql  insert_records.expected  insert_records.sql  insert_records_with_nulls.sql  (+66 more)
test/sol.vdb/: planets.vtb
