set(Sources
    main.c
    vdb.c
    util.c
    schema.c
    tree.c
    node.c
    record.c
    pager.c
    lexer.c
    parser.c
    error.c
    token.c
    )

set(Headers
    vdb.h
    util.h
    schema.h
    tree.h
    node.h
    record.h
    pager.h
    lexer.h
    parser.h
    error.h
    token.h
    )

add_executable(
    vdb
    ${Headers}
    ${Sources}
    )
