set(Sources
    main.c
    cursor.c
    util.c
    schema.c
    tree.c
    node.c
    record.c
    pager.c
    lexer.c
    parser.c
    error.c
    token.c
    value.c
    binarytree.c
    hashtable.c
    interp.c
    )

set(Headers
    cursor.h
    util.h
    schema.h
    tree.h
    node.h
    record.h
    pager.h
    lexer.h
    parser.h
    error.h
    token.h
    value.h
    binarytree.h
    hashtable.h
    interp.h
    )

add_executable(
    vdb
    ${Headers}
    ${Sources}
    )
